# nc_mcp_server

./: .gitignore  .pre-commit-config.yaml  GUIDANCE.md  LICENSE  PROGRESS.md  README.md  codecov.yml  pyproject.toml
.github/: docker-compose.ci.yml  php-ci.ini
.github/workflows/: ci.yml  lint.yml  publish.yml  tests-integration.yml  tests-unit.yml
src/nc_mcp_server/: client.py  config.py  server.py
src/nc_mcp_server/tools/: activity.py  announcements.py  app_management.py  calendar.py  circles.py  collectives.py  comments.py  contacts.py  cospend.py  files.py  mail.py  notifications.py  reminders.py  search.py  shares.py  system_tags.py  talk.py  tasks.py  trashbin.py  user_status.py  users.py  versions.py
src/nextcloud_mcp/: __main__.py  annotations.py  client.py  config.py  permissions.py  server.py
src/nextcloud_mcp/tools/: comments.py  files.py  notifications.py  shares.py  user_status.py  users.py
tests/: conftest.py  test_config.py  test_permissions.py  test_reminders.py
tests/integration/: conftest.py  test_activity.py  test_announcements.py  test_app_management.py  test_circles.py  test_collectives.py  test_comments.py  test_contacts.py  test_cospend.py  test_errors.py  test_files.py  test_mail.py  test_notifications.py  test_permissions.py  test_reminders.py  test_search.py  test_server.py  test_session_cache.py  test_shares.py  test_system_tags.py  test_talk.py  test_tasks.py  test_user_permissions.py  test_user_status.py  test_users.py  test_versions.py
